# insdc-rdf

./: .dockerignore  Cargo.toml  Dockerfile  README.md  build.rs
.github/workflows/: ci.yml  publish.yml  release.yml
config/bioproject/: description.yaml  metadata.yaml  model.yaml  prefix.yaml  shape.shex  sparql.yaml
config/biosample/: model.yaml  shape.shex
config/sra/: description.yaml  metadata.yaml  model.yaml  prefix.yaml  shape.shex  sparql.yaml
config/sra-experiment/: description.yaml  endpoint.yaml  metadata.yaml  model.yaml  prefix.yaml  shape.shex  sparql.yaml
crates/bioproject/: Cargo.toml
crates/bioproject/src/: chunk.rs  lib.rs  model.rs  parser.rs
crates/bioproject/src/serializer/: jsonld.rs  mod.rs  ntriples.rs  turtle.rs
crates/biosample/: Cargo.toml
crates/biosample/src/: chunk.rs  lib.rs  model.rs  parser.rs  validate.rs
crates/biosample/src/serializer/: jsonld.rs  mod.rs  ntriples.rs  turtle.rs
crates/core/: Cargo.toml
crates/core/src/: error.rs  escape.rs  lib.rs  manifest.rs  prefix.rs  progress.rs
crates/sra/: Cargo.toml
crates/sra-experiment/: Cargo.toml
crates/sra-experiment/src/: chunk.rs  lib.rs  model.rs  parser.rs
crates/sra-experiment/src/serializer/: jsonld.rs  mod.rs  ntriples.rs  turtle.rs
crates/sra/src/: chunk.rs  lib.rs  model.rs  parser.rs
crates/sra/src/serializer/: jsonld.rs  mod.rs  ntriples.rs  turtle.rs
docs/: schema.html
docs/superpowers/plans/: 2026-04-07-sra-experiment-metadata.md
docs/superpowers/specs/: 2026-04-07-sra-experiment-metadata-design.md
scripts/: nig_benchmark.sh  nig_convert.sh  nig_download.sh  nig_full_test.sh  oxigraph_load.sh  validate_sparql.sh  validate_sparql_qlever.sh  verify_sra_experiment.py
src/: main.rs
tests/fixtures/: bioproject_sample.xml  experiment_sample.xml  malformed_record.xml  sra_accessions_sample.tab
