[package]
name = "insdc-rdf-core"
version = "0.1.0"
edition = "2021"
description = "Shared types for insdc-rdf converters"

[dependencies]
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"

[dev-dependencies]
tempfile = "3"
