[package]
name = "insdc-rdf-sra-experiment"
version = "0.2.0"
edition = "2021"
description = "SRA experiment metadata XML to RDF converter"

[dependencies]
insdc-rdf-core = { path = "../core" }
quick-xml = "0.37"
flate2 = "1"
tar = "0.4"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"
