[package]
name = "insdc-rdf-sra"
version = "0.1.0"
edition = "2021"
description = "SRA accession cross-links to RDF converter"

[dependencies]
insdc-rdf-core = { path = "../core" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
md-5 = "0.10"

[dev-dependencies]
tempfile = "3"
